# cacheql

./: .gitignore  CACHE_STRATEGIES_ISSUES.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/fastapi-ariadne-redis/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  test_caching.py
examples/fastapi-ariadne-redis/app/: __init__.py  database.py  main.py  resolvers.py  schema.py
examples/fastapi-strawberry-redis/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
examples/fastapi-strawberry-redis/app/: __init__.py  database.py  main.py  schema.py
extras/redis/: README.md  pyproject.toml
extras/redis/src/cacheql_redis/: __init__.py  backend.py
src/cacheql/: __init__.py  decorators.py  hints.py
src/cacheql/adapters/: __init__.py
src/cacheql/adapters/ariadne/: __init__.py  decorators.py  extension.py  graphql.py  handler.py
src/cacheql/adapters/strawberry/: __init__.py  extension.py
src/cacheql/core/: __init__.py
src/cacheql/core/entities/: __init__.py  cache_config.py  cache_control.py  cache_entry.py  cache_key.py
src/cacheql/core/interfaces/: __init__.py  cache_backend.py  invalidator.py  key_builder.py  serializer.py
src/cacheql/core/services/: __init__.py  cache_control_calculator.py  cache_service.py  directive_parser.py
src/cacheql/infrastructure/: __init__.py
src/cacheql/infrastructure/backends/: __init__.py  memory.py
src/cacheql/infrastructure/key_builders/: __init__.py  default.py
src/cacheql/infrastructure/serializers/: __init__.py  json.py
src/cacheql/utils/: __init__.py  hashing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/ariadne/: __init__.py  test_extension.py
tests/integration/strawberry/: __init__.py  test_extension.py
tests/unit/: __init__.py  test_decorators.py  test_hints.py
tests/unit/adapters/ariadne/: test_decorators.py  test_handler.py
tests/unit/adapters/strawberry/: test_extension.py
tests/unit/core/: __init__.py  test_cache_control.py  test_cache_service.py  test_directive_parser.py  test_entities.py  test_invalidation.py
tests/unit/infrastructure/: __init__.py  test_key_builder.py  test_memory_backend.py  test_serializer.py
