[project]
name = "cacheql"
version = "0.0.1a1"
description = "Server-side caching framework for GraphQL APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raphael Nogueira", email = "raphael0608@gmail.com" }]
keywords = ["graphql", "cache", "ariadne", "strawberry", "async", "apollo", "cachecontrol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "cachetools>=5.0",
]

[project.urls]
Homepage = "https://github.com/nogueira-raphael/cacheql"
Repository = "https://github.com/nogueira-raphael/cacheql"
Issues = "https://github.com/nogueira-raphael/cacheql/issues"
Changelog = "https://github.com/nogueira-raphael/cacheql/releases"

[project.optional-dependencies]
ariadne = ["ariadne>=0.20"]
strawberry = ["strawberry-graphql>=0.200"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["cacheql[ariadne,strawberry,redis]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cacheql"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/cacheql"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff.lint.isort]
known-first-party = ["cacheql"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", "examples"]

[[tool.mypy.overrides]]
module = ["cachetools.*", "ariadne.*", "strawberry.*", "redis.*"]
ignore_missing_imports = true
